working on profiel popup

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -3,6 +3,7 @@
   --content-spacing: 16px;
   --content-max-width: 1955px;
   --background-noise: url("/images/download.svg");
+  scroll-behavior: smooth;
 }
 
 
