resolving the sidebar closing

--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -34,7 +34,8 @@ header {
 
 aside.sidebar {
   position: relative;
-  width: 320px;
+  width: 100%;
+  max-width: 320px;
   padding: 20px 40px;
   background-color: $bg-black;
 
