--- a/src/assets/scss/components/siderbar/_userprofile.scss
+++ b/src/assets/scss/components/siderbar/_userprofile.scss
@@ -7,7 +7,12 @@
   margin-bottom: 20px;
   min-width: 241px;
 
-
+  .signin_sidebar {
+    display: inline-block;
+    padding-block: 5px;
+    text-align: center;
+    width: 100%;
+  }
 
   p {
     font-size: 16px;
@@ -19,5 +24,9 @@
       height: 32px;
       border-radius: 50%;
     }
+
+    text-align: center;
+
+
   }
 }
