--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -341,6 +341,7 @@ section.watchlist_page {
         text-align: left;
         border: 0;
         background-color: unset;
+        padding-left: 0;
 
       }
 
