--- a/src/assets/scss/components/login/_login.scss
+++ b/src/assets/scss/components/login/_login.scss
@@ -77,11 +77,10 @@
           color: transparent; // Hide placeholder text
         }
 
-        input:focus+label,
+        &:focus-within label,
         input:not(:placeholder-shown)+label {
           top: 8px;
           font-size: 12px;
-          // color: #333;
         }
       }
 
@@ -107,7 +106,7 @@
   }
 
   @include bp(tablet-sm) {
-    margin: 20px 0;
+    // margin: 20px 0;
   }
 }
 
